--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.26.0",
